k8s/istio-ingressgateawy-neg-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
  name: istio-ingressgateway-neg-svc
  namespace: istio-system
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  type: ClusterIP
