k8s/istio-ingressgateway-neg-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-ingressgateway-neg-ing
  namespace: istio-system
spec:
  backend:
    serviceName: istio-ingressgateway-neg-svc
    servicePort: 80
